--- a/final project/WPFclient/connectedUser.xaml
+++ b/final project/WPFclient/connectedUser.xaml
@@ -1,18 +1,15 @@
 ﻿<Window x:Class="WPFclient.connectedUser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="connectedUser" Height="700" Width="416"  WindowStartupLocation="Manual" Top="14" Left="50">
+        Title="connectedUser" Height="500" Width="416" ResizeMode="CanMinimize" WindowStartupLocation="Manual" Top="14" Left="50">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="BG.png"/>
         </Grid.Background>
-        <Label Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,0"/>
+        <Label Name="UserName" Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,0"/>
         <Label Content="Trivia Pro" FontSize="40" HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Top" FontWeight="Bold" />
         <Label Content="Connected Users" FontSize="30" HorizontalAlignment="Center" Margin="0,120,0,0" VerticalAlignment="Top" />
-        <ListBox HorizontalAlignment="Center" Width="300" Height="338" Margin="54,194,54,137" FontSize="25" HorizontalContentAlignment="Center" VerticalAlignment="Center">
-            <ListBoxItem>User1</ListBoxItem>
-            <ListBoxItem>User2</ListBoxItem>
-            <ListBoxItem>User3</ListBoxItem>
+        <ListBox Name="usersList" HorizontalAlignment="Center" Width="300" Height="178" Margin="54,196,54,95" FontSize="25" HorizontalContentAlignment="Center" VerticalAlignment="Center">
         </ListBox>
 
 
