--- a/final project/WPFclient/correctAnswer.xaml
+++ b/final project/WPFclient/correctAnswer.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WPFclient.correctAnswer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="correctAnswer" Height="700" Width="416">
+        Title="correctAnswer" Height="700" Width="416" ResizeMode="CanMinimize">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="BG_green.png"/>
