--- a/final project/WPFclient/game.xaml
+++ b/final project/WPFclient/game.xaml
@@ -1,12 +1,9 @@
 ﻿<Window x:Class="WPFclient.game"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Icon="logo.ico"
-        Title="game" Height="700" Width="416">
+        Icon="icon.ico"
+        Title="game" Height="700" Width="416" ResizeMode="CanMinimize">
     <Grid>
-        <!--<Grid.Background>
-            <ImageBrush ImageSource="BG.png"/>
-        </Grid.Background>-->
         <Label Content="Trivia Pro" FontSize="40" HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Top" FontWeight="Bold" />
         <Label Content="roomName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,425"/>
         <Label Content="question: 1/5" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,360"/>
@@ -17,7 +14,7 @@
         <Button Name="button4" Width="300" Height="46" Padding="10,0,10,0" FontSize="31" Background="LightSteelBlue" Content="answer 4" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,310,0,0" Click="click_checkAnswer" />
         <Label Content="5" Width="Auto" Height="Auto" FontSize="20" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,460,0,0"/>
         <Label Content="score: " Width="Auto" Height="Auto" FontSize="25" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,550,0,0"/>
-        <Label Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,425"/>
+        <Label Name="UserName" Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,425"/>
         <Button Width="50" Height="45" Padding="0,0,0,0" FontSize="31" Background="LightSteelBlue" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="20,0,0,20" Click="click_mainMenu">
             <Image Source="Resources\HomeIcon.png" Width="20" Height="20"/>
         </Button>
