--- a/final project/WPFclient/mainMenu.xaml
+++ b/final project/WPFclient/mainMenu.xaml
@@ -1,18 +1,18 @@
 ﻿<Window x:Class="WPFclient.mainMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Trivia Pro" Height="700" Width="416">
+        Icon="icon.ico"
+        Title="Trivia Pro" Height="700" Width="416" ResizeMode="CanMinimize">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="BG.png"/>
         </Grid.Background>
-        <Label Content="Trivia Pro" Height="60" Width="150" FontSize="31" FontWeight="Bold" Margin="124,40,134,569"/>
-        <Button Content="Create room" HorizontalAlignment="Left" Background="LightSteelBlue" Margin="70,233,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33"/>
-        <Button Content="Join room" HorizontalAlignment="Left" Background="LightSteelBlue" Margin="70,303,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33"/>
-        <Button Content="Highscores" HorizontalAlignment="Left" Background="LightSteelBlue" Margin="70,373,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33" Click="button_highScores"/>
-        <Button Content="Personal stats" HorizontalAlignment="Left" Background="LightSteelBlue" Margin="70,443,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33"/>
-        <Button Content="Log out" HorizontalAlignment="Left"  Background="LightSteelBlue" Margin="133,570,0,0" FontSize="31" VerticalAlignment="Top" Width="150" Height="70" RenderTransformOrigin="-0.58,0.33" Click="button_logout"/>
-        <TextBox HorizontalAlignment="Stretch" Height="46" Margin="40,519,40,0" TextWrapping="Wrap" BorderThickness="0" VerticalAlignment="Top" Width="Auto" x:Name="Output" Text="sd" />
-
+        <Label Content="Trivia Pro" FontSize="40" HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Top" FontWeight="Bold" />
+        <Button Content="Create room" HorizontalAlignment="Center" Background="LightSteelBlue" Margin="0,233,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33" Click="click_createRoom"/>
+        <Button Content="Join room" HorizontalAlignment="Center" Background="LightSteelBlue" Margin="0,303,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33" Click="click_joinRoom"/>
+        <Button Content="Highscores" HorizontalAlignment="Center" Background="LightSteelBlue" Margin="0,373,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33" Click="click_highScores"/>
+        <Button Content="Personal stats" HorizontalAlignment="Center" Background="LightSteelBlue" Margin="0,443,0,0" FontSize="31" VerticalAlignment="Top" Width="276" Height="48" RenderTransformOrigin="-0.58,0.33" Click="click_personalStats"/>
+        <Button Content="Log out" HorizontalAlignment="Center"  Background="LightSteelBlue" Margin="0,583,0,0" FontSize="31" VerticalAlignment="Top" Width="150" Height="57" RenderTransformOrigin="-0.58,0.33" Click="click_logOut"/>
+        <Label Name="UserName" Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,0"/>
     </Grid>
 </Window>
