--- a/final project/WPFclient/wrongAnswer.xaml
+++ b/final project/WPFclient/wrongAnswer.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WPFclient.wrongAnswer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wrongAnswer" Height="700" Width="416">
+        Title="wrongAnswer" Height="700" Width="416" ResizeMode="CanMinimize">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="BG_red.png"/>
