--- a/final project/WPFclient/game.xaml
+++ b/final project/WPFclient/game.xaml
@@ -14,7 +14,7 @@
         <Button x:Name="button3" Width="368" Height="46" Padding="10,0,10,0" FontSize="17" Background="LightSteelBlue" Content="answer 3" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="21,408,21,217" Click="click_checkAnswer" />
         <Button x:Name="button4" Width="368" Height="46" Padding="10,0,10,0" FontSize="17" Background="LightSteelBlue" Content="answer 4" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="21,468,21,157" Click="click_checkAnswer" />
         <Label x:Name="timerLabel" Content="5" Width="Auto" Height="Auto" FontSize="20" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,460,0,0"/>
-        <Label Content="score: " Width="Auto" Height="Auto" FontSize="25" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,550,0,0"/>
+        <Label Name="score" Content="score: " Width="Auto" Height="Auto" FontSize="25" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,550,0,0"/>
         <Label x:Name="UserName" Content="UserName" Width="Auto" Height="Auto" FontSize="20" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="top" Margin="0,0,0,425"/>
         <Button Width="50" Height="45" Padding="0,0,0,0" FontSize="31" Background="LightSteelBlue" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="20,0,0,20" Click="click_mainMenu">
             <Image Source="Resources\HomeIcon.png" Width="20" Height="20"/>
